force-app/main/default/objects/CustomLead__c/CustomLead__c.object-meta.xml
<CustomObject>
    <description>Leads custom object</description>
    <label>CustomLead</label>
    <nameField>
        <label>CustomLead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLeads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>