force-app/main/default/objects/CustomLead__c/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>A numeric score out of 100 that indicates a how hot a lead is.</description>
    <label>Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>