force-app/main/default/objects/CustomLead__c/validationRules/Email_Cannot_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Cannot_Be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email__c)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter an email address in the Email field</errorMessage>
</ValidationRule>